Jul 20, 2012 - chris ---------------------------------------------------
o Fixed issue 8: Fixed data corruption when retrieving a record returns
	HAM_BLOB_NOT_FOUND (thanks, Artem)

Jul 10, 2012 - chris ---------------------------------------------------
o Fixed crash when reusing a page from the cache that was not correctly
	initialized (thanks, Jason)
o Fixed crash when HAM_ENABLE_RECOVERY w/o HAM_ENABLE_TRANSACTIONS (thanks,
	Peter)

Jul 08, 2012 - chris ---------------------------------------------------
o Fixed issue 7: approximate matching did not return the correct key
	(thanks, Artem)
o Fixed MacOS compilation problem
	(thanks, Jason P.)

Jun 24, 2012 - chris ---------------------------------------------------
                      release of hamsterdb-2.0.3

Jun 20, 2012 - chris ---------------------------------------------------
o Added project files for Windows MSVC 2010

Jun 8, 2012 - chris ---------------------------------------------------
o fixed linker error when libboost_thread-mt.lib is installed (instead of
	libboost_thread.lib) (thanks, foxb)
o issue #6: fixed compilation error in OSX Lion
o fixed HAM_INTERNAL_ERROR when creating database with
	HAM_ENABLE_RECOVERY but without HAM_ENABLE_TRANSACTIONS (thanks, Peter)

Apr 23, 2012 - chris ---------------------------------------------------
o configure.in now checking for pread and pwrite (for some reason the
	previous test were missing)
o fixed fsync's when flushing to disk, making recovery more robust

Apr 22, 2012 - chris ---------------------------------------------------
o The legacy database format of hamsterdb 1.0.9 and older is no longer
    supported

Apr 21, 2012 - chris ---------------------------------------------------
o Fixed a bug in recovery; recovery is now more robust, and there are more
    fsync's if HAM_WRITE_THROUGH is enabled

Apr 25, 2012 - chris ---------------------------------------------------
                      release of hamsterdb-2.0.2
